# ecowatt-twitter-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy.template.yml  deployment.yaml  kustomization.yaml
.github/workflows/: ci.yaml
cicd/: build.py  deploy.py  main.py  requirements.txt
cicd/command/: build.py  deploy.py  dev.py
kustomize/: local.yaml  prod.yaml
mock/: deployment.yaml  main.py  service.yaml
src/: main.rs  rte.rs  twitter.rs
templates/: daily_prevision_tweet.j2  prevision_tweet.j2  tweet.j2
