[package]
name = "ecowatt-twitter-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
env_logger = "0.9.1"
log = "0.4.17"
oauth = { version = "0.6", package = "oauth1-request" }
oauth2 = "4.2.3"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
tera = "1.17.0"
url = "2.2.2"
